--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -25,3 +25,14 @@ body {
     text-wrap: balance;
   }
 }
+
+
+@keyframes twinkle {
+  0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+.animate-twinkle {
+  animation: twinkle 5s infinite;
+}
