--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -70,3 +70,23 @@ body {
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+
+Copy code
+/* For Chrome and Safari */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #4a5568;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #2d3748;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
