--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,14 +5,14 @@
 
 
 :root {
-  --background: #ffffff;
+  --background: #2e5466;
   --foreground: #2e5466;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #11445c;
-    --foreground: #ededed;
+    --foreground: #2e5466;
   }
 }
 
