--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,14 +5,14 @@
 
 
 :root {
-  --background: #2e5466;
-  --foreground: #2e5466;
+  --background: #2596be;
+  --foreground: #2596be;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #11445c;
-    --foreground: #2e5466;
+    --foreground: #2596be;
   }
 }
 
@@ -61,7 +61,7 @@ body {
 /* For Firefox */
 .custom-scrollbar {
   scrollbar-width: thin;
-  scrollbar-color: #4a5568 #2d3748;
+  scrollbar-color: #4a5568 #2596be;
 }
 
 
@@ -84,7 +84,7 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background-color: #2d3748;
+  background-color: #2596be;
 }
 
 .hide-scrollbar::-webkit-scrollbar {
